Added outer container

--- a/app/index.html
+++ b/app/index.html
@@ -15,17 +15,18 @@
 
 <body>
 
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
- 
+  <div class="container">
+
+    <ul class="menu">
+      <li><a href="#/view1">view1</a></li>
+      <li><a href="#/view2">view2</a></li>
+    </ul>
 
 
-  <div ng-view></div>
+    <div ng-view></div>
 
-  Some content..
-
+    Some content..
+  </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
