--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My AngularJS App</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="description" content=""/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+  <link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
+
   <link rel="stylesheet" href="app.css">
 </head>
 
-<body>
+<body ng-controller="MainCtrl">
 
   <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -37,7 +39,7 @@
             <li class="dropdown" uib-dropdown>
               <a href="#" uib-dropdown-toggle role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
+                <li><a href="#/viewMain">View Main</a></li>
                 <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
@@ -68,7 +70,6 @@
     <div ng-view></div>
 
     Some content..
-http://angular-ui.github.io/bootstrap/
   </div>
 
   <!-- In production use:
@@ -78,10 +79,14 @@ http://angular-ui.github.io/bootstrap/
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="bower_components/satellizer/satellizer.min.js"></script>
   <script src="app.js"></script>
+  <script src="user/userService.js"></script>
   <script src="viewMain/viewMain.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
+  <script src="auth/auth.js"></script>
+  <script src="viewHome/viewHome.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
