--- a/app/auth/login.html
+++ b/app/auth/login.html
@@ -8,6 +8,7 @@
                 <div class="col-sm-5 ce-social-links">
                     <h2>Social Sign in</h2>
                     <ul class="list-unstyled">
+                        <!--
                         <li>
                             <button class="btn btn-linkedin" ng-click="authenticate('linkedin')"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</button>
                         </li>
@@ -17,9 +18,9 @@
                         <li>
                             <button class="btn btn-twitter" ng-click="authenticate('twitter')"><i class="fa fa-twitter fa-fw"></i> Twitter</button>
                         </li>
-                        <li>
-                            <button class="btn btn-danger" ng-click="authenticate('google')"><i class="fa fa-google-plus fa-fw"></i> Google</button>
-                        </li>
+                        -->
+                        <li> <button class="btn btn-danger" ng-click="authenticate('google')"><i class="fa fa-google-plus fa-fw"></i> Google</button> </li>
+                        <li> <button class="btn btn-success" ng-click="authenticate('shib')"><i class="fa fa-users fa-fw"></i> UK Federation</button> </li>
                     </ul>
                 </div>
                 <div class="col-sm-7">
@@ -28,7 +29,6 @@
 
                             <div class="ce-or-divider">
                                 <span class="ce-hr"></span>
-                                <span class="ce-or">OR</span>
                             </div>
 
                         </div>
