--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content=""/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+  <link type="text/css" rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link type="text/css" rel="stylesheet" href="assets/css/style.css"/>
 
   <link rel="stylesheet" href="app.css">
